--- a/sm3/Cargo.toml
+++ b/sm3/Cargo.toml
@@ -21,9 +21,9 @@ hex-literal = "1"
 base16ct = { version = "0.2", features = ["alloc"] }
 
 [features]
-default = ["alloc"]
+default = ["alloc", "oid"]
 alloc = ["digest/alloc"]
 zeroize = ["digest/zeroize"]
-
+oid = ["digest/oid"]
 [package.metadata.docs.rs]
 all-features = true
